force-app/main/default/objects/Proposal_Role__c/Proposal_Role__c.object-meta.xml
<CustomObject>
    <label>Proposal Role</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Proposal Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Roles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>