force-app/main/default/objects/Proposal_Role__c/fields/Account_Name_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Hidden__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.Name)), Account__r.Name, 
IF(NOT(ISBLANK(Company_Name__c)),Company_Name__c,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Hidden</label>
    <type>Text</type>
</CustomField>