force-app/main/default/objects/Proposal_Role__c/fields/Alternate_Party__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternate Party</label>
    <type>Checkbox</type>
</CustomField>