force-app/main/default/objects/Proposal_Role__c/fields/Assistance_Type__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Type__c</fullName>
    <label>Assistance Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HEAP</fullName>
            </value>
            <value>
                <fullName>Supplemental Security Income (SSI)</fullName>
            </value>
            <value>
                <fullName>SNAP (Food Stamps)</fullName>
            </value>
            <value>
                <fullName>Public Assistance</fullName>
            </value>
            <value>
                <fullName>TANF (Temporary Assistance for Needy Families)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>