force-app/main/default/objects/Proposal_Role__c/fields/Average_Hours_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Average_Hours_to_Work__c</fullName>
    <description>Created for WFD/OJT Intern project application.</description>
    <label>Average Hours to Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>