force-app/main/default/objects/Proposal_Role__c/fields/Certification_ID__c.field-meta.xml
<CustomField>
    <fullName>Certification_ID__c</fullName>
    <label>Certification ID#</label>
    <length>200</length>
    <type>Text</type>
</CustomField>