force-app/main/default/objects/Proposal_Role__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <inlineHelpText>The Company Name and Tax Identification Number (TIN) must match the information provided to the Internal Revenue Service (IRS). Please confirm that the information provided here is identical to the company’s W-9 as submitted to the IRS.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>