force-app/main/default/objects/Proposal_Role__c/fields/Company_TIN_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Company_TIN_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company TIN Confirmation</label>
    <type>Checkbox</type>
</CustomField>