force-app/main/default/objects/Proposal_Role__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting &amp; Advisory</fullName>
            </value>
            <value>
                <fullName>Financial - Boutique Investment Banks/Advisory</fullName>
            </value>
            <value>
                <fullName>Financial - Funds</fullName>
            </value>
            <value>
                <fullName>Financial - Global, Corporate and/or Investment Bank</fullName>
            </value>
            <value>
                <fullName>Financial - Insurance Company</fullName>
            </value>
            <value>
                <fullName>Financial - Regional Bank</fullName>
            </value>
            <value>
                <fullName>Financial - Specialty Finance Company</fullName>
            </value>
            <value>
                <fullName>Government Authority</fullName>
            </value>
            <value>
                <fullName>Industry - Energy Project Developer</fullName>
            </value>
            <value>
                <fullName>Industry - Energy Service Company/Equipment Provider/Equipment Manufacturer</fullName>
            </value>
            <value>
                <fullName>Industry - Independent Power Producer</fullName>
            </value>
            <value>
                <fullName>Industry - Other Energy Technology Providers &amp; Vendors</fullName>
            </value>
            <value>
                <fullName>Industry - Property Owner/Developer</fullName>
            </value>
            <value>
                <fullName>Industry - Utility</fullName>
            </value>
            <value>
                <fullName>MUSH - Hospital (Healthcare Provider)</fullName>
            </value>
            <value>
                <fullName>MUSH - Municipality</fullName>
            </value>
            <value>
                <fullName>MUSH - School</fullName>
            </value>
            <value>
                <fullName>MUSH - University</fullName>
            </value>
            <value>
                <fullName>Other - Engineering Firm</fullName>
            </value>
            <value>
                <fullName>Other - Legal Firm</fullName>
            </value>
            <value>
                <fullName>Other - Media</fullName>
            </value>
            <value>
                <fullName>Other - Support Services</fullName>
            </value>
            <value>
                <fullName>Other - External Legal Firm</fullName>
                <isActive>false</isActive>
                <label>Other - External Legal Firm</label>
            </value>
            <value>
                <fullName>Other - Internal Legal Firm</fullName>
                <isActive>false</isActive>
                <label>Other - Internal Legal Firm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>