force-app/main/default/objects/Proposal_Role__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <label>Company Website</label>
    <length>100</length>
    <type>Text</type>
</CustomField>