force-app/main/default/objects/Proposal_Role__c/fields/Company_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Company_ZIP__c</fullName>
    <label>Company ZIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>