force-app/main/default/objects/Proposal_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Project_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>