force-app/main/default/objects/Proposal_Role__c/fields/Contract_Signer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Signer</label>
    <type>Checkbox</type>
</CustomField>