force-app/main/default/objects/Proposal_Role__c/fields/Counties_Available_Spring__c.field-meta.xml
<CustomField>
    <fullName>Counties_Available_Spring__c</fullName>
    <description>Used by WFD Intern Application</description>
    <inlineHelpText>Spring – Select the county(ies) that you are willing to work in (select all that apply):</inlineHelpText>
    <label>Counties Available Spring</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albany</fullName>
            </value>
            <value>
                <fullName>Allegany</fullName>
            </value>
            <value>
                <fullName>Bronx</fullName>
            </value>
            <value>
                <fullName>Broome</fullName>
            </value>
            <value>
                <fullName>Cattaraugus</fullName>
            </value>
            <value>
                <fullName>Cayuga</fullName>
            </value>
            <value>
                <fullName>Chautauqua</fullName>
            </value>
            <value>
                <fullName>Chemung</fullName>
            </value>
            <value>
                <fullName>Chenango</fullName>
            </value>
            <value>
                <fullName>Clinton</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Cortland</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Dutchess</fullName>
            </value>
            <value>
                <fullName>Erie</fullName>
            </value>
            <value>
                <fullName>Essex</fullName>
            </value>
            <value>
                <fullName>Franklin</fullName>
            </value>
            <value>
                <fullName>Fulton</fullName>
            </value>
            <value>
                <fullName>Genesee</fullName>
            </value>
            <value>
                <fullName>Greene</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>Herkimer</fullName>
            </value>
            <value>
                <fullName>Jefferson</fullName>
            </value>
            <value>
                <fullName>Kings</fullName>
            </value>
            <value>
                <fullName>Lewis</fullName>
            </value>
            <value>
                <fullName>Livingston</fullName>
            </value>
            <value>
                <fullName>Madison</fullName>
            </value>
            <value>
                <fullName>Monroe</fullName>
            </value>
            <value>
                <fullName>Montgomery</fullName>
            </value>
            <value>
                <fullName>Nassau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>