force-app/main/default/objects/Proposal_Role__c/fields/Currently_Selected__c.field-meta.xml
<CustomField>
    <fullName>Currently_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Selected</label>
    <type>Checkbox</type>
</CustomField>