force-app/main/default/objects/Proposal_Role__c/fields/Customer_Income_Availability__c.field-meta.xml
<CustomField>
    <fullName>Customer_Income_Availability__c</fullName>
    <label>Customer Income Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>