force-app/main/default/objects/Proposal_Role__c/fields/Customer_Income_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Customer_Income_Eligibility__c</fullName>
    <label>Customer Income Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitting Income Documentation</fullName>
            </value>
            <value>
                <fullName>Not Submitting Income Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>