force-app/main/default/objects/Proposal_Role__c/fields/Date_range_of_classes_during_internship__c.field-meta.xml
<CustomField>
    <fullName>Date_range_of_classes_during_internship__c</fullName>
    <description>Created for WFD/OJT intern project application.</description>
    <label>Date range of classes during internship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>