force-app/main/default/objects/Proposal_Role__c/fields/Driver_License__c.field-meta.xml
<CustomField>
    <fullName>Driver_License__c</fullName>
    <label>Driver License</label>
    <length>50</length>
    <type>Text</type>
</CustomField>