force-app/main/default/objects/Proposal_Role__c/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <inlineHelpText>A Dun &amp; Bradstreet (DUNS) number, is a unique nine-digit identification number for each physical location of your business. DUNS number assignment is free for all businesses required to register with the federal or state government for contracts or grants</inlineHelpText>
    <label>DUNS Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>