force-app/main/default/objects/Proposal_Role__c/fields/Duplicate_Information__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Information__c</fullName>
    <description>This field is used to store duplicate contact and Account Id while creating Project Role. related to Task T-01579</description>
    <label>Duplicate Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>