force-app/main/default/objects/Proposal_Role__c/fields/EDI_Statement_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>EDI_Statement_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EDI Statement Acceptance</label>
    <type>Checkbox</type>
</CustomField>