force-app/main/default/objects/Proposal_Role__c/fields/Eligibility_Certifying_Entity__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Certifying_Entity__c</fullName>
    <description>SF-33361</description>
    <label>Eligibility Certifying Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>WAP Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>