force-app/main/default/objects/Proposal_Role__c/fields/Eligible_to_work_in_United_States__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_work_in_United_States__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by WFD.</description>
    <label>Eligible to work in United States</label>
    <type>Checkbox</type>
</CustomField>