force-app/main/default/objects/Proposal_Role__c/fields/Employee_Identification_Number_EIN__c.field-meta.xml
<CustomField>
    <fullName>Employee_Identification_Number_EIN__c</fullName>
    <description>Please see the instructions provided by the IRS on the &quot;Form W-9&quot; for a detailed description on where to find your EIN here: http://www.irs.gov/Forms-&amp;-Pubs</description>
    <inlineHelpText>Please see the instructions provided by the IRS on the &quot;Form W-9&quot; for a detailed description on where to find your EIN here: http://www.irs.gov/Forms-&amp;-Pubs</inlineHelpText>
    <label>Employee Identification Number (EIN)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>