force-app/main/default/objects/Proposal_Role__c/fields/Employment_Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Employment_Areas_of_Interest__c</fullName>
    <description>Used by WFD Intern Application</description>
    <label>Employment Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Transportation</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Grid Modernization and Energy Storage</fullName>
            </value>
            <value>
                <fullName>Renewable Electric Power Generation</fullName>
            </value>
            <value>
                <fullName>Renewable Fuels</fullName>
            </value>
            <value>
                <fullName>Alternative Transportation Energy Efficiency</fullName>
                <isActive>false</isActive>
                <label>Alternative Transportation Energy Efficiency</label>
            </value>
            <value>
                <fullName>Alternative Transportation Grid Modernization and Energy Storage</fullName>
                <isActive>false</isActive>
                <label>Alternative Transportation Grid Modernization and Energy Storage</label>
            </value>
            <value>
                <fullName>Energy Efficiency Renewable Fuels</fullName>
                <isActive>false</isActive>
                <label>Energy Efficiency Renewable Fuels</label>
            </value>
            <value>
                <fullName>Grid Modernization and Energy Storage Renewable Electric Power Generation</fullName>
                <isActive>false</isActive>
                <label>Grid Modernization and Energy Storage Renewable Electric Power Generation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>