force-app/main/default/objects/Proposal_Role__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>Select the entity type doing business with New York State</description>
    <inlineHelpText>Select the entity type doing business with New York State</inlineHelpText>
    <label>Entity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Disregarded Entity</fullName>
            </value>
            <value>
                <fullName>Federal, State or Local Government</fullName>
            </value>
            <value>
                <fullName>Individual / Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Limited Liability Co.</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Public Authority</fullName>
            </value>
            <value>
                <fullName>Trust / Estates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>