force-app/main/default/objects/Proposal_Role__c/fields/EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeId__c</fullName>
    <label>EnvelopeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>