force-app/main/default/objects/Proposal_Role__c/fields/Exempt_Payee_Code__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Payee_Code__c</fullName>
    <description>If you are exempt from backup withholding and/or FATCA reporting, provide any EPC that may apply to you. For EPC and additional instructions, please refer to the instructions located on IRS Form W-9, which can be found on the IRS website under Forms and Publications.</description>
    <inlineHelpText>If you are exempt from backup withholding and/or FATCA reporting, provide any EPC that may apply to you. For EPC and additional instructions, please refer to the instructions located on IRS Form W-9 in the IRS website under Forms and Publications.</inlineHelpText>
    <label>Exempt Payee Code</label>
    <type>TextArea</type>
</CustomField>