force-app/main/default/objects/Proposal_Role__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <type>Phone</type>
</CustomField>