force-app/main/default/objects/Proposal_Role__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>For LSR</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>