force-app/main/default/objects/Proposal_Role__c/fields/How_did_you_hear_Other__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_Other__c</fullName>
    <label>How did you hear? - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>