force-app/main/default/objects/Proposal_Role__c/fields/Initally_Selected_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Initally_Selected_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF-32306</description>
    <label>Initally Selected Contractor</label>
    <type>Checkbox</type>
</CustomField>