force-app/main/default/objects/Proposal_Role__c/fields/Installer_Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Installer_Certification_Type__c</fullName>
    <label>Installer Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NFI</fullName>
            </value>
            <value>
                <fullName>BPI</fullName>
            </value>
            <value>
                <fullName>CSIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>