force-app/main/default/objects/Proposal_Role__c/fields/Intern_Hired_as_a_W2_employee__c.field-meta.xml
<CustomField>
    <fullName>Intern_Hired_as_a_W2_employee__c</fullName>
    <description>Created for WFD/OJT intern project application</description>
    <label>Intern Hired as a W2 employee?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>