force-app/main/default/objects/Proposal_Role__c/fields/Intern_Major_Program_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Intern_Major_Program_of_Study__c</fullName>
    <description>WFD Internship (aka Intern Hire) Application</description>
    <label>Intern Major / Program of Study</label>
    <length>100</length>
    <type>Text</type>
</CustomField>