force-app/main/default/objects/Proposal_Role__c/fields/Intern_prev_employed_by_organization__c.field-meta.xml
<CustomField>
    <fullName>Intern_prev_employed_by_organization__c</fullName>
    <description>Created for WFD/OJT intern project application</description>
    <label>Intern prev. employed by organization?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>